--- a/src/main/resources/com/vertex/vos/customerRegistration.fxml
+++ b/src/main/resources/com/vertex/vos/customerRegistration.fxml
@@ -16,7 +16,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="771.0" prefWidth="782.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.CustomerRegistrationController">
+<ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="771.0" prefWidth="782.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.CustomerRegistrationController">
    <content>
       <VBox prefHeight="200.0" prefWidth="100.0" spacing="10.0" styleClass="text" stylesheets="@assets/style.css">
          <children>
@@ -28,6 +28,13 @@
                      </image>
                   </ImageView>
                   <Label fx:id="storeName" style="-fx-text-fill: linear-gradient(to right, #155d99, #5A90CF);" styleClass="header" stylesheets="@assets/style.css" text="Customer Registration" />
+                  <CheckBox fx:id="isActive" mnemonicParsing="false" text="Active" />
+                  <HBox alignment="CENTER_LEFT" spacing="10.0">
+                     <children>
+                        <CheckBox fx:id="isVat" mnemonicParsing="false" text="isVat?" />
+                        <CheckBox fx:id="isWithholding" mnemonicParsing="false" text="isWithholding?" />
+                     </children>
+                  </HBox>
                </children>
             </HBox>
             <HBox alignment="CENTER_LEFT" spacing="10.0">
@@ -332,27 +339,21 @@
                   </VBox>
                </children>
             </HBox>
-            <HBox alignment="CENTER_LEFT" spacing="10.0">
+            <VBox prefHeight="95.0" prefWidth="705.0">
                <children>
-                  <VBox>
-                     <children>
-                        <Label text="Other Details">
-                           <VBox.margin>
-                              <Insets left="10.0" />
-                           </VBox.margin>
-                        </Label>
-                        <TextArea fx:id="otherDetailsTextArea" prefHeight="200.0" prefWidth="200.0" />
-                        <Label fx:id="otherDetailsErr" layoutX="20.0" layoutY="10.0" style="-fx-text-fill: #ff0000;" textFill="RED">
-                           <VBox.margin>
-                              <Insets left="10.0" />
-                           </VBox.margin>
-                        </Label>
-                     </children>
-                  </VBox>
-                  <CheckBox fx:id="isVat" mnemonicParsing="false" text="isVat?" />
-                  <CheckBox fx:id="isWithholding" mnemonicParsing="false" text="isWithholding?" />
+                  <Label text="Other Details">
+                     <VBox.margin>
+                        <Insets left="10.0" />
+                     </VBox.margin>
+                  </Label>
+                  <TextArea fx:id="otherDetailsTextArea" prefHeight="200.0" prefWidth="388.0" />
+                  <Label fx:id="otherDetailsErr" layoutX="20.0" layoutY="10.0" style="-fx-text-fill: #ff0000;" textFill="RED">
+                     <VBox.margin>
+                        <Insets left="10.0" />
+                     </VBox.margin>
+                  </Label>
                </children>
-            </HBox>
+            </VBox>
             <HBox alignment="CENTER_LEFT" spacing="10.0">
                <children>
                   <VBox>
