--- a/src/main/resources/com/vertex/vos/SalesInvoiceTemporary.fxml
+++ b/src/main/resources/com/vertex/vos/SalesInvoiceTemporary.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.net.URL?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.ComboBox?>
@@ -9,11 +10,15 @@
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
 <BorderPane style="-fx-padding: 10;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.SalesInvoiceTemporaryController">
@@ -28,16 +33,38 @@
             <HBox style="-fx-spacing: 10;">
                <children>
                   <Label styleClass="header" text="Sales Encoding" />
-                  <VBox prefHeight="35.0" prefWidth="220.0">
-                     <children>
-                        <Label text="Receipt Type" />
-                        <ComboBox fx:id="receiptType" prefWidth="166.0" style="-fx-background-color: #ffffff; -fx-background-radius: 10;" />
-                     </children>
-                  </VBox>
                   <VBox layoutX="188.0" layoutY="10.0" prefHeight="35.0" prefWidth="220.0">
                      <children>
                         <Label text="Invoice Date" />
                         <DatePicker fx:id="invoiceDate" />
+                     </children>
+                  </VBox>
+                  <VBox>
+                     <children>
+                        <Label text="Customer">
+                           <graphic>
+                              <ImageView fitHeight="15.0" fitWidth="15.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@assets/icons/search.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                        </Label>
+                        <TextField fx:id="customerTextField" />
+                     </children>
+                  </VBox>
+                  <VBox layoutX="648.0" layoutY="10.0">
+                     <children>
+                        <Label text="Salesman">
+                           <graphic>
+                              <ImageView fitHeight="15.0" fitWidth="15.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@assets/icons/search.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                        </Label>
+                        <TextField fx:id="salesmanTextField" />
                      </children>
                   </VBox>
                </children>
@@ -52,52 +79,8 @@
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <TableView fx:id="itemsTable" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                     </children>
-                  </AnchorPane>
-            </content>
-          </Tab>
-          <Tab text="Returns">
-            <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0">
-                     <children>
-                        <TableView fx:id="returnsTable" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                     </children>
-                  </AnchorPane>
-            </content>
-          </Tab>
-        </tabs>
-      </TabPane>
-   </center>
-   <bottom>
-      <ButtonBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-        <buttons>
-          <Button mnemonicParsing="false" text="Confirm" />
-        </buttons>
-      </ButtonBar>
-   </bottom>
-   <left>
-      <VBox BorderPane.alignment="CENTER">
-         <children>
-            <HBox alignment="CENTER_LEFT" spacing="10.0">
-               <children>
-                  <VBox>
-                     <children>
-                        <VBox fx:id="selectCustomerButton" layoutX="10.0" layoutY="10.0">
-                           <children>
-                              <HBox alignment="CENTER_LEFT">
-                                 <children>
-                                    <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
-                                       <image>
-                                          <Image url="@assets/icons/Add.png" />
-                                       </image>
-                                    </ImageView>
-                                    <Label style="-fx-text-fill: linear-gradient(to right, #155d99, #5A90CF); -fx-font-size: 15;" styleClass="sub-header" text="Select Customer" />
-                                 </children>
-                              </HBox>
-                           </children>
-                        </VBox>
-                        <VBox fx:id="addProductButton">
+                        <TableView fx:id="itemsTable" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                        <VBox fx:id="addProductToItems" layoutX="10.0" layoutY="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0">
                            <children>
                               <HBox alignment="CENTER_LEFT">
                                  <children>
@@ -111,7 +94,16 @@
                               </HBox>
                            </children>
                         </VBox>
-                        <VBox fx:id="selectSalesmanButton" layoutX="10.0" layoutY="40.0">
+                     </children>
+                  </AnchorPane>
+            </content>
+          </Tab>
+          <Tab text="Returns">
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0">
+                     <children>
+                        <TableView fx:id="returnsTable" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                        <VBox fx:id="addProductToReturns" layoutX="20.0" layoutY="20.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0">
                            <children>
                               <HBox alignment="CENTER_LEFT">
                                  <children>
@@ -120,18 +112,104 @@
                                           <Image url="@assets/icons/Add.png" />
                                        </image>
                                     </ImageView>
-                                    <Label style="-fx-text-fill: linear-gradient(to right, #155d99, #5A90CF); -fx-font-size: 15;" styleClass="sub-header" text="Select Salesman" />
+                                    <Label style="-fx-text-fill: linear-gradient(to right, #155d99, #5A90CF); -fx-font-size: 15;" styleClass="sub-header" text="Select Products" />
                                  </children>
                               </HBox>
                            </children>
                         </VBox>
                      </children>
-                  </VBox>
+                  </AnchorPane>
+            </content>
+          </Tab>
+        </tabs>
+      </TabPane>
+   </center>
+   <bottom>
+      <ButtonBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+        <buttons>
+          <Button fx:id="confirmButton" mnemonicParsing="false" text="Confirm" />
+        </buttons>
+      </ButtonBar>
+   </bottom>
+   <right>
+      <HBox spacing="5.0" BorderPane.alignment="CENTER">
+         <children>
+            <VBox layoutX="10.0" layoutY="10.0">
+               <children>
+                  <GridPane>
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" />
+                      <ColumnConstraints hgrow="SOMETIMES" />
+                        <ColumnConstraints hgrow="SOMETIMES" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <Label fx:id="totalSales" text="Total Sales (VAT Inclusive)" />
+                        <Label fx:id="lessVat" text="Less VAT" GridPane.rowIndex="1" />
+                        <Label fx:id="amountNetOfVat" text="Amount: Net Of VAT" GridPane.rowIndex="2" />
+                        <Label fx:id="lessSCPWDDiscount" text="Less SC/PWD Discount" GridPane.rowIndex="3" />
+                        <Label fx:id="amountDue" text="Amount Due" GridPane.rowIndex="4" />
+                        <Label fx:id="addVAT" text="Add: VAT" GridPane.rowIndex="5" />
+                        <Label fx:id="totalAmountDue" text="Total Amount Due" GridPane.rowIndex="10" />
+                        <Label fx:id="vatableSales" text="VATable Sales" GridPane.rowIndex="6" />
+                        <Label fx:id="vatExemptSales" text="VAT-Exempt Sales" GridPane.rowIndex="7" />
+                        <Label fx:id="zeroRatedSales" text="Zero Rated Sales" GridPane.rowIndex="8" />
+                        <Label fx:id="vatAmount" text="VAT Amount" GridPane.rowIndex="9" />
+                        <Label fx:id="totalSalesVatInclusiveValue" text="0.00" GridPane.columnIndex="1" />
+                        <Label fx:id="lessVatValue" text="0.00" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <Label fx:id="amountNetOfVatValue" text="0.00" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <Label fx:id="lessSCPWDDiscountValue" text="0.00" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                        <Label fx:id="amountDueValue" text="0.00" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                        <Label fx:id="addVatValue" text="0.00" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                        <Label fx:id="vatableSalesValue" text="0.00" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                        <Label fx:id="vatExemptValue" text="0.00" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+                        <Label fx:id="zeroRatedSalesValue" text="0.00" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+                        <Label fx:id="vatAmountValue" text="0.00" GridPane.columnIndex="1" GridPane.rowIndex="9" />
+                        <Label fx:id="totalAmountDueValue" text="0.00" GridPane.columnIndex="1" GridPane.rowIndex="10" />
+                     </children>
+                     <VBox.margin>
+                        <Insets />
+                     </VBox.margin>
+                  </GridPane>
                </children>
-            </HBox>
-            <Label fx:id="customerSelected" styleClass="sub-header" />
-            <Label fx:id="salesmanSelected" styleClass="sub-header" />
+               <padding>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </padding>
+            </VBox>
          </children>
+      </HBox>
+   </right>
+   <left>
+      <VBox prefWidth="200.0" BorderPane.alignment="CENTER">
+         <children>
+            <VBox>
+               <children>
+                  <Label text="Receipt Type" />
+                  <ComboBox fx:id="receiptType" prefWidth="166.0" style="-fx-background-color: #ffffff; -fx-background-radius: 10;" />
+               </children>
+            </VBox>
+            <VBox>
+               <children>
+                  <Label text="Reference No." />
+                  <TextField fx:id="referenceNoTextField" />
+               </children>
+            </VBox>
+         </children>
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </padding>
       </VBox>
    </left>
 </BorderPane>
