--- a/src/main/resources/com/vertex/vos/InternalOperationsContent.fxml
+++ b/src/main/resources/com/vertex/vos/InternalOperationsContent.fxml
@@ -268,6 +268,30 @@
                         </DropShadow>
                      </effect>
                   </VBox>
+                  <VBox fx:id="openSalesEncodingTemp" alignment="CENTER_LEFT" layoutX="10.0" layoutY="406.0" maxWidth="200.0" spacing="30.0" style="-fx-background-color: white; -fx-background-radius: 20px;" styleClass="text">
+                     <children>
+                        <HBox alignment="CENTER" spacing="10.0">
+                           <children>
+                              <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@assets/icons/Shopping%20Cart%20With%20Money.png" />
+                                 </image>
+                              </ImageView>
+                              <Label style="-fx-font-size: 17px; -fx-text-fill: linear-gradient(to right, #155d99, #5A90CF);" styleClass="text-title-logo" stylesheets="@assets/global.css" text="Sales Encoding Temporary" wrapText="true" />
+                           </children>
+                        </HBox>
+                     </children>
+                     <padding>
+                        <Insets bottom="30.0" left="15.0" right="15.0" top="30.0" />
+                     </padding>
+                     <effect>
+                        <DropShadow>
+                           <color>
+                              <Color opacity="0.5" />
+                           </color>
+                        </DropShadow>
+                     </effect>
+                  </VBox>
                     </children>
                 </TilePane>
          </children>
